--- a/Russian rocket attack on Ukraine hospital kills two - BBC News.html
+++ b/Russian rocket attack on Ukraine hospital kills two - BBC News.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0046)https://www.bbc.com/news/world-europe-65720853 -->
-<html lang="en-GB" class="">
+<html lang="en-GB" class="a">
 
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
