--- a/index.html
+++ b/index.html
@@ -7304,7 +7304,7 @@
                                  <div
                                     id="google_ads_iframe_/4817/bbccom.live.site.news/news_europe_content_0__container__"
                                     style="border: 0pt none;"><iframe
-                                       id="google_ads_iframe_/4817/bbccom.live.site.news/news_europe_content_0"
+                                       id="google_ads_iframe_/4817/bbccom.live.site.news/news_europe_content_0"./Russian rocket attack on Ukraine hospital kills two - BBC News_files/iframe.html
                                        name="google_ads_iframe_/4817/bbccom.live.site.news/news_europe_content_0"
                                        title="3rd party ad content" width="970" height="250" scrolling="no"
                                        marginwidth="0" marginheight="0" frameborder="0" role="region"
@@ -7312,7 +7312,7 @@
                                        style="border: 0px; vertical-align: bottom;" data-load-complete="true"
                                        data-google-container-id="1"
                                        data-integralas-id-3ec35cf4-8173-27ee-1e9a-3b69caa58492=""
-                                       src="./Russian rocket attack on Ukraine hospital kills two - BBC News_files/saved_resource.html"></iframe>
+                                       src="./maxresdefault.jpg"></iframe>
                                  </div>
                               </div>
                            </div>
@@ -7440,8 +7440,8 @@
                                                    id="smphtml5iframebbcMediaPlayer0"
                                                    name="smphtml5iframebbcMediaPlayer0" allow="autoplay" frameborder="0"
                                                    scrolling="no" lang="en-GB" allowfullscreen="" allowtransparency=""
-                                                   style="position:absolute;left:0;top:0;width:100%;height:100%"
-                                                   src="./Russian rocket attack on Ukraine hospital kills two - BBC News_files/iframe.html"
+                                                   style="position:absolute;left:0;top:0;width:900px;height:900px"
+                                                   src="./09690000-0a00-0242-1f01-08da6608b60c_cx0_cy10_cw99_w1200_r1.jpg"
                                                    title="Ukraine clinic devastated Russian missile strike"></iframe>
                                              </div>
                                           </div><noscript>
